Bugfixing and style adjustment
- Fixed a bug where win percentage would overflow the statistics window
- Using default letter color green instead of hardcoding it
- Shrinking down font size for statistics and timer, since it looks bad on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -224,11 +224,12 @@ header
 .statistics-container
 {
     flex: 1;
+    padding-right: 5px;
 }
 
 .statistics-container .statistics
 {
-    font-size: 36px;
+    font-size: 27px;
     font-weight: 400;
     display: flex;
     align-items: center;
@@ -312,7 +313,7 @@ header
 
 #nextPajglaTimer
 {
-    font-size: 36px;
+    font-size: 34px;
     text-align: center;
 }
 
